[task] add AlanCaptcha

--- a/templates/page/create_cat.html.twig
+++ b/templates/page/create_cat.html.twig
@@ -13,3 +13,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://api.alancaptcha.com/widget/latest/widget.bundle.js"></script>
+{% endblock %}
